--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,6 +17,7 @@
 @import 'partials/pages/membership';
 @import 'partials/pages/education';
 @import 'partials/pages/faculty';
+@import 'partials/pages/classes';
 
 @import 'partials/header';
 @import 'partials/footer';
