removed all traces of VC
Signed-off-by: Steve Lombardi <smlombardi@gmail.com>

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -18,6 +18,7 @@
 @import 'partials/pages/education';
 @import 'partials/pages/faculty';
 @import 'partials/pages/classes';
+@import 'partials/pages/donate';
 
 @import 'partials/header';
 @import 'partials/footer';
