--- a/sass/partials/_forms.scss
+++ b/sass/partials/_forms.scss
@@ -62,6 +62,9 @@
 body .gform_wrapper .top_label div.ginput_container {
   margin-top: 0 !important;
 }
+.column .gform_wrapper {
+  margin-top: 0 !important;
+}
 
 .ginput_complex label, .ginput_container_radio label {
   font-weight: normal;
