--- a/css/main.css
+++ b/css/main.css
@@ -84,6 +84,8 @@ textarea { border-color: #bfbfbf !important; }
 
 body .gform_wrapper .top_label div.ginput_container { margin-top: 0 !important; }
 
+.column .gform_wrapper { margin-top: 0 !important; }
+
 .ginput_complex label, .ginput_container_radio label { font-weight: normal; }
 
 .trustees .col-left h3, .trustees .col-main h3, .trustees .col-right h3 { text-transform: uppercase; font-weight: bold; font-size: 14px; font-family: "Open Sans", Helvetica, Arial, sans-serif; }
@@ -422,6 +424,8 @@ blockquote { border-left: 0; }
 .page-classes .row-bottom .opportunities { padding-left: 10px; border-left: 6px double #6c6e70; font-size: 17px; line-height: 24px; }
 
 .page-classes .row-bottom .opportunities .opportunities-title { margin-bottom: 5px; text-transform: uppercase; font-size: 30px; font-family: "LTC Twentieth Century Medium", Helvetica, Arial, sans-serif; }
+
+.page-donate .left-column-image { margin-top: 30px; }
 
 @media (max-width: 599px) { .navbar-nav { margin-left: 15px; } }
 
