creating single product page
Signed-off-by: Steve Lombardi <smlombardi@gmail.com>

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -19,6 +19,7 @@
 @import 'partials/pages/faculty';
 @import 'partials/pages/classes';
 @import 'partials/pages/donate';
+@import 'partials/pages/class-details';
 
 @import 'partials/header';
 @import 'partials/footer';
