--- a/css/main.css
+++ b/css/main.css
@@ -427,6 +427,14 @@ blockquote { border-left: 0; }
 
 .page-donate .left-column-image { margin-top: 30px; }
 
+.single-product .quantity { display: none !important; }
+
+.single-product .variations .label { display: none; }
+
+.single-product .product_title.entry-title { color: #a30723; font-weight: bold; font-size: 20px; line-height: 18px; margin-bottom: 2px; }
+
+.single-product .instructor { margin-bottom: 30px; }
+
 @media (max-width: 599px) { .navbar-nav { margin-left: 15px; } }
 
 .navbar-nav > li > a { padding: 10px 11px; color: #6d6e70; text-transform: uppercase; letter-spacing: .04em; font-size: 12px; }
