--- a/sass/partials/pages/_class-details.scss
+++ b/sass/partials/pages/_class-details.scss
@@ -17,4 +17,38 @@
   .instructor {
     margin-bottom: 30px;
   }
+  .description, .description p {
+    font-family: $sans;
+    font-size: 14px;
+    line-height: 18px;
+    margin-bottom: 6px;
+  }
+  .woocommerce-variation-price {
+    margin-bottom: 20px;
+  }
+
+
+  .single_add_to_cart_button.button.alt {
+    color: $maroon;
+    background-color: #fff;
+    border: 1px solid $maroon;
+    &.disabled {
+      background-color: #fff;
+      color: $maroon;
+      &:hover {
+        background-color: #fff;
+        color: $maroon;
+      }
+    }
+    &:hover {
+      color: #fff;
+      background-color: $maroon;
+    }
+  }
+
+}
+
+.woocommerce div.product p.price, .woocommerce div.product span.price {
+  color: $gray !important;
+  font-size: 16px;
 }
