--- a/css/main.css
+++ b/css/main.css
@@ -449,6 +449,8 @@ blockquote { border-left: 0; }
 
 .woocommerce div.product p.price, .woocommerce div.product span.price { color: #6c6e70 !important; font-size: 16px; }
 
+.woocommerce #content div.product div.summary, .woocommerce div.product div.summary, .woocommerce-page #content div.product div.summary, .woocommerce-page div.product div.summary { float: right; width: 46%; }
+
 @media (max-width: 599px) { .navbar-nav { margin-left: 15px; } }
 
 .navbar-nav > li > a { padding: 10px 11px; color: #6d6e70; text-transform: uppercase; letter-spacing: .04em; font-size: 12px; }
